address PR comments

--- a/notebooks/All About REM Statistics.ipynb
+++ b/notebooks/All About REM Statistics.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "27e49c93-57d7-4ee9-bb54-623b50e4e87c",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
    "id": "2aa2f974-6382-45db-9b8a-bc127873f924",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "id": "064bddb1-9644-44d3-96de-4d7a070e2772",
    "metadata": {},
    "outputs": [
@@ -146,7 +146,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 8,
    "id": "90889101-3961-4c23-841c-f6bfb994cee1",
    "metadata": {},
    "outputs": [],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "id": "6bafae54",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
        " 'propane': {'value': 7.3776, 'unit': 'kgCO2e/gallon'}}"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "id": "11047db1-32f6-46b4-be7a-fe79eecaab7d",
    "metadata": {},
    "outputs": [
@@ -374,7 +374,7 @@
        "400"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "id": "9000390b-3ccf-42dc-b1bd-8df3c67e1a21",
    "metadata": {},
    "outputs": [],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 17,
    "id": "8ae5239f-0a6b-4838-aa56-a800a8f69fe2",
    "metadata": {},
    "outputs": [
@@ -428,7 +428,7 @@
        " 'delta': {'value': -1566.8037, 'unit': 'gallon'}}"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "id": "f4a4ad93-2321-4925-a783-691768f23ce9",
    "metadata": {},
    "outputs": [
@@ -469,7 +469,7 @@
        "0.0"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -494,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 19,
    "id": "69e7ded5-6084-4031-906a-5f806b447632",
    "metadata": {},
    "outputs": [
@@ -506,7 +506,7 @@
        " 'delta': {'value': -1521.6891, 'unit': 'gallon'}}"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -530,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 20,
    "id": "e54eb08e-491b-4f2b-83b3-1fd4901941a5",
    "metadata": {},
    "outputs": [
@@ -540,7 +540,7 @@
        "{'value': 0.0, 'unit': 'gallon'}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 21,
    "id": "172e005f",
    "metadata": {},
    "outputs": [
@@ -561,7 +561,7 @@
        "{'value': 161.4628, 'unit': 'gallon'}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -582,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "id": "00facc0b-8037-495a-ae24-451017d0fecf",
    "metadata": {},
    "outputs": [],
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 23,
    "id": "9e391af5-451b-43ef-88fd-572ee62b041c",
    "metadata": {},
    "outputs": [],
@@ -602,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 24,
    "id": "c197ae97-0161-4d3d-8103-13eb9ecdfb5f",
    "metadata": {},
    "outputs": [
@@ -614,7 +614,7 @@
        " 'delta': {'value': -16628.4805, 'unit': 'kgCO2e'}}"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 25,
    "id": "77f9bbef-5c57-405a-a2c6-6f206c7b499c",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
        "-51.21"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,12 +694,12 @@
    "id": "b4341688",
    "metadata": {},
    "source": [
-    "The estimates returned for `baseline` usage may vary between calls to different upgrades because the samples used to calculate all of the statistics are chosen conditioned on eligibility for the requested upgrade. For example, a sample would be ineligible for a weatherization upgrade like `weatherization__insulation_air_duct_sealing` if it already has insulation and air sealing levels that surpass the upgrade thresholds as described under Measure Package 1 [here](https://oedi-data-lake.s3.amazonaws.com/nrel-pds-building-stock/end-use-load-profiles-for-us-building-stock/2022/EUSS_ResRound1_Technical_Documentation.pdf). These ineligible samples are excluded from the statistical calculations for `baseline`, `upgrade` and `delta`. If we had included these, then the `delta` statistics would have been taken over lots of samples with delta=0 merely because the upgrade was not applied. Let's look at an example."
+    "The estimates returned for `baseline` usage may vary between calls to different upgrades because the samples used to calculate all of the statistics are chosen conditioned on the requested upgrade being applicable. For example, a weatherization upgrade like `weatherization__insulation_air_duct_sealing` would not be applicable for a given building sample if the existing envelope already meets or exceeds the upgrade thresholds as described under Measure Package 1 [here](https://oedi-data-lake.s3.amazonaws.com/nrel-pds-building-stock/end-use-load-profiles-for-us-building-stock/2022/EUSS_ResRound1_Technical_Documentation.pdf). Samples such as thise are excluded from the statistical calculations for `baseline`, `upgrade` and `delta`. If we had included these, then the `delta` statistics would have been taken over lots of samples with delta=0 merely because the upgrade was not applied. Let's look at an example."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 26,
    "id": "019bb0f9",
    "metadata": {},
    "outputs": [],
@@ -717,12 +717,12 @@
    "id": "5842046b",
    "metadata": {},
    "source": [
-    "The mean baseline usage for a home that is eligible for this weatherization upgrade is ~83 MWh:"
+    "The mean baseline usage for a home for which weatherization upgrade is applicable is ~83 MWh:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 28,
    "id": "d06951d1",
    "metadata": {},
    "outputs": [
@@ -732,14 +732,14 @@
        "82594.0357"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "baseline_usage_assuming_eligibility = data_weatherization['fuel_results']['total']['baseline']['energy']['mean']['value']\n",
-    "baseline_usage_assuming_eligibility"
+    "baseline_usage_assuming_applicaibility = data_weatherization['fuel_results']['total']['baseline']['energy']['mean']['value']\n",
+    "baseline_usage_assuming_applicaibility"
    ]
   },
   {
@@ -747,22 +747,22 @@
    "id": "77a60dc5",
    "metadata": {},
    "source": [
-    "This mean is taken over 363 samples. An additional 37 samples were not included since the level of existing sealing and insulation surpassed the upgrade thresholds. "
+    "This mean is taken over 363 samples. An additional 37 samples whose existing envelope met or exceeded the upgrade thresholds were not included."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 29,
    "id": "b9022596",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'num_samples': 363, 'num_ineligible_samples': 37}"
+       "{'num_samples': 363, 'num_excluded_samples': 37}"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,12 +776,12 @@
    "id": "8252fa0b",
    "metadata": {},
    "source": [
-    "If we are interested in baseline usage more generally over all of these samples, so regardless of eligibility for this upgrade, we would want to request the `baseline` upgrade."
+    "If we are interested in baseline usage more generally over all of these samples, so regardless of upgrade applicability, we would want to make a request with `upgrade = 'baseline'`. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 30,
    "id": "c781a74e",
    "metadata": {},
    "outputs": [],
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 31,
    "id": "d74ac6b0",
    "metadata": {},
    "outputs": [
@@ -818,7 +818,7 @@
    ],
    "source": [
     "baseline_usage = data_baseline['fuel_results']['total']['baseline']['energy']['mean']['value']\n",
-    "print(f\"The expected baseline energy usage is {baseline_usage_assuming_eligibility - baseline_usage:,.0f} kWh lower when including all {data_baseline['sampling_details']['num_samples']} samples.\")"
+    "print(f\"The expected baseline energy usage is {baseline_usage_assuming_applicaibility - baseline_usage:,.0f} kWh lower when including all {data_baseline['sampling_details']['num_samples']} samples.\")"
    ]
   },
   {
@@ -826,22 +826,22 @@
    "id": "f43f05d6",
    "metadata": {},
    "source": [
-    "For many upgrades, such as `hvac__heat_pump_seer18_hspf10`, all samples will be eligible for the upgrade, in which case the baseline results should be itentical to that of the baseline-specific request. One can always examine the `sampling_details` to determine if any samples were excluded due to ineligibility. If we go back to our example heat pump example from earlier, we can see that all 400 samples were used and that the mean baseline energy usage is the same."
+    "Many upgrades, such as `hvac__heat_pump_seer18_hspf10`, will be applicable to all samples, in which case the baseline results should be itentical to that of the baseline-specific request. One can always examine the `sampling_details` to determine if any samples were excluded due to inapplicabilty of the upgrade. If we go back to our example heat pump example from earlier, we can see that all 400 samples were used and that the mean baseline energy usage is identical."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 32,
    "id": "e5800fd3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'num_samples': 400, 'num_ineligible_samples': 0}"
+       "{'num_samples': 400, 'num_excluded_samples': 0}"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -852,7 +852,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 33,
    "id": "a64eb8ea",
    "metadata": {},
    "outputs": [
@@ -862,7 +862,7 @@
        "True"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
