fix typos and change hostname back to production version

--- a/notebooks/All About REM Statistics.ipynb
+++ b/notebooks/All About REM Statistics.ipynb
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "27e49c93-57d7-4ee9-bb54-623b50e4e87c",
    "metadata": {},
    "outputs": [],
@@ -66,8 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# HOST = \"https://api.rewiringamerica.org\"\n",
-    "HOST = \"http://127.0.0.1:8000\"\n",
+    "HOST = \"https://api.rewiringamerica.org\"\n",
     "REM_ADDRESS_URL = f\"{HOST}/api/v1/rem/address\"\n",
     "\n",
     "API_KEY = None  # Put your API key here, or better yet in the file ~/.rwapi/api_key.txt"
@@ -694,7 +693,7 @@
    "id": "b4341688",
    "metadata": {},
    "source": [
-    "The estimates returned for `baseline` usage may vary between calls to different upgrades because the samples used to calculate all of the statistics are chosen conditioned on the requested upgrade being applicable. For example, a weatherization upgrade like `weatherization__insulation_air_duct_sealing` would not be applicable for a given building sample if the existing envelope already meets or exceeds the upgrade thresholds as described under Measure Package 1 [here](https://oedi-data-lake.s3.amazonaws.com/nrel-pds-building-stock/end-use-load-profiles-for-us-building-stock/2022/EUSS_ResRound1_Technical_Documentation.pdf). Samples such as thise are excluded from the statistical calculations for `baseline`, `upgrade` and `delta`. If we had included these, then the `delta` statistics would have been taken over lots of samples with delta=0 merely because the upgrade was not applied. Let's look at an example."
+    "The estimates returned for `baseline` usage may vary between calls to different upgrades because the samples used to calculate all of the statistics are chosen conditioned on the requested upgrade being applicable. For example, a weatherization upgrade like `weatherization__insulation_air_duct_sealing` would not be applicable for a given building sample if the existing envelope already meets or exceeds the upgrade thresholds as described under Measure Package 1 [here](https://oedi-data-lake.s3.amazonaws.com/nrel-pds-building-stock/end-use-load-profiles-for-us-building-stock/2022/EUSS_ResRound1_Technical_Documentation.pdf). Samples such as this are excluded from the statistical calculations for `baseline`, `upgrade` and `delta`. If we had included these, then the `delta` statistics would have been taken over lots of samples with delta=0 merely because the upgrade was not applied. Let's look at an example."
    ]
   },
   {
@@ -826,7 +825,7 @@
    "id": "f43f05d6",
    "metadata": {},
    "source": [
-    "Many upgrades, such as `hvac__heat_pump_seer18_hspf10`, will be applicable to all samples, in which case the baseline results should be itentical to that of the baseline-specific request. One can always examine the `sampling_details` to determine if any samples were excluded due to inapplicabilty of the upgrade. If we go back to our example heat pump example from earlier, we can see that all 400 samples were used and that the mean baseline energy usage is identical."
+    "Many upgrades, such as `hvac__heat_pump_seer18_hspf10`, will be applicable to all samples, in which case the baseline results should be itentical to that of the baseline-specific request. One can always examine the `sampling_details` to determine if any samples were excluded due to inapplicability of the upgrade. If we go back to our heat pump example from earlier, we can see that all 400 samples were used and that the mean baseline energy usage is identical."
    ]
   },
   {
