--- a/notebooks/REM Demo.ipynb
+++ b/notebooks/REM Demo.ipynb
@@ -33,8 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# HOST = \"https://api.rewiringamerica.org\"\n",
-    "HOST = \"http://127.0.0.1:8000\"\n",
+    "HOST = \"https://api.rewiringamerica.org\"\n",
     "REM_ADDRESS_URL = f\"{HOST}/api/v1/rem/address\"\n",
     "\n",
     "API_KEY = None  # Put your API key here, or better yet in the file ~/.rwapi/api_key.txt"
