Explain baseline differences and show sampling details (#13)
* explain baseline differences and show sampling details

* cleanup some language

* Apply suggestions from code review

Co-authored-by: Natalie Weires <weires.natalie@gmail.com>

* add commited changes

* add uncommited changes

* address PR comments

* address PR comments

* fix typos and change hostname back to production version

---------

Co-authored-by: Natalie Weires <weires.natalie@gmail.com>

--- a/notebooks/REM Demo.ipynb
+++ b/notebooks/REM Demo.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 24,
    "id": "27e49c93-57d7-4ee9-bb54-623b50e4e87c",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "cecd5ef2-6a34-4752-9899-fc3fe519c3d9",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "654ba342-e8d5-480b-9bcc-cd9e226b1122",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "58f2da86-6a32-448d-83a5-ba487e6c54a8",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "2aa2f974-6382-45db-9b8a-bc127873f924",
    "metadata": {},
    "outputs": [],
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "90889101-3961-4c23-841c-f6bfb994cee1",
    "metadata": {},
    "outputs": [],
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "6aab1b8e-c3d9-4d0f-a7d4-1a86f1543def",
    "metadata": {
     "scrolled": true
@@ -134,7 +134,7 @@
        "'Expected annual savings: $659.07'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,14 +157,17 @@
     "\n",
     "A special case occurs when `baseline` is requested as the upgrade. In this case, REM returns a subset of the expected data structure.\n",
     "For each `fuel_type` within `fuel_results`, the `upgrade` and `delta` fields will not be populated. \n",
-    "Requesting `baseline` tells REM to perform estimation without applying any upgrades.\n",
+    "Requesting `baseline` tells REM to perform estimation without applying any upgrades. \n",
+    "If specifically interested in baseline usage, it is recommended to use this request, since the `baseline` estimates returned from other upgrade queries represent the usage assuming the upgrade is applicable for the home. To learn more about reasons for this,\n",
+    "refer to the [All About REM Statistics notebook](https://github.com/rewiringamerica/api_demos/blob/main/notebooks/All%20About%20REM%20Statistics.ipynb).\n",
+    "\n",
     "\n",
     "Performing a request with only `baseline` can be done similarly to other requests."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "d697ac84",
    "metadata": {},
    "outputs": [],
@@ -190,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "1831a4bd",
    "metadata": {},
    "outputs": [],
@@ -201,10 +204,147 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "cf88eec5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>metric</th>\n",
+       "      <th>stat</th>\n",
+       "      <th>value</th>\n",
+       "      <th>unit</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>energy</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>818.0488</td>\n",
+       "      <td>therm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>energy</td>\n",
+       "      <td>median</td>\n",
+       "      <td>773.5015</td>\n",
+       "      <td>therm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>energy</td>\n",
+       "      <td>percentile_20</td>\n",
+       "      <td>558.5560</td>\n",
+       "      <td>therm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>energy</td>\n",
+       "      <td>percentile_80</td>\n",
+       "      <td>1023.5165</td>\n",
+       "      <td>therm</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>emissions</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>5464.4159</td>\n",
+       "      <td>kgCO2e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>emissions</td>\n",
+       "      <td>median</td>\n",
+       "      <td>5166.8484</td>\n",
+       "      <td>kgCO2e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>emissions</td>\n",
+       "      <td>percentile_20</td>\n",
+       "      <td>3731.0518</td>\n",
+       "      <td>kgCO2e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>emissions</td>\n",
+       "      <td>percentile_80</td>\n",
+       "      <td>6836.9028</td>\n",
+       "      <td>kgCO2e</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>cost</td>\n",
+       "      <td>mean</td>\n",
+       "      <td>1297.4921</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>cost</td>\n",
+       "      <td>median</td>\n",
+       "      <td>1241.7834</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>cost</td>\n",
+       "      <td>percentile_20</td>\n",
+       "      <td>972.9829</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>cost</td>\n",
+       "      <td>percentile_80</td>\n",
+       "      <td>1554.4402</td>\n",
+       "      <td>$</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       metric           stat      value    unit\n",
+       "0      energy           mean   818.0488   therm\n",
+       "1      energy         median   773.5015   therm\n",
+       "2      energy  percentile_20   558.5560   therm\n",
+       "3      energy  percentile_80  1023.5165   therm\n",
+       "4   emissions           mean  5464.4159  kgCO2e\n",
+       "5   emissions         median  5166.8484  kgCO2e\n",
+       "6   emissions  percentile_20  3731.0518  kgCO2e\n",
+       "7   emissions  percentile_80  6836.9028  kgCO2e\n",
+       "8        cost           mean  1297.4921       $\n",
+       "9        cost         median  1241.7834       $\n",
+       "10       cost  percentile_20   972.9829       $\n",
+       "11       cost  percentile_80  1554.4402       $"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Convert the baseline from JSON to a pandas data frame for further\n",
     "# analysis.\n",
@@ -226,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "5e302eba",
    "metadata": {},
    "outputs": [],
@@ -236,26 +376,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "f32a8ed4",
    "metadata": {},
    "outputs": [],
    "source": [
     "fuel_results[heating_fuel][\"delta\"]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e39346ac-4825-4f21-a1e8-74c004629005",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -269,7 +401,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
