Clarify comment about wh fuel type making results more accurate

--- a/notebooks/REM Demo.ipynb
+++ b/notebooks/REM Demo.ipynb
@@ -427,7 +427,7 @@
    "id": "41a4aca4-8ebe-4ff0-9631-ac50f02a791a",
    "metadata": {},
    "source": [
-    "You can optionally set `water_heater_fuel` for other upgrades as well. This can help make the baseline results more accurate, by restricting the modeled homes to those with water heaters fueled in the same way.\n",
+    "You can optionally set `water_heater_fuel` for other upgrades as well. This can help make the results more accurate, by restricting the modeled homes to those with water heaters fueled in the same way.\n",
     "\n",
     "However, if your water heater fuel type is relatively unusual for homes in your area with your heating fuel type, there is a chance the model won't be able to make a good prediction and you'll get an error message.\n",
     "\n",
